# HERMES-CONTROL

./: AGENTS.md  NOTICE.md  README.md  README_EN.md  README_KO.md  pyproject.toml
.github/workflows/: compatibility.yml
docs/: AI_OPERATIONS_MANUAL.md  ARCHITECTURE_KO.md  UPSTREAM_COMPATIBILITY.md
scripts/: build_compat_bundle.py
src/hermes_control/: __init__.py  cli.py  installer.py  manifest.py
src/hermes_control/artifacts/: hermes_timeline_code_map-0.1.1-py3-none-any.whl
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.1/: files.sha256  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.10/: files.sha256  include-paths.txt  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.11/: files.sha256  include-paths.txt  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.12/: files.sha256  include-paths.txt  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.13/: files.sha256  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.15/: files.sha256  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.16/: files.sha256  include-paths.txt  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.2/: files.sha256  include-paths.txt  manifest.json
src/hermes_control/compatibility/hermes-agent-0.18.0-control-0.1.3/: files.sha256  manifest.json
tests/: test_build_compat_bundle.py  test_installer.py  test_manifest.py
(+14 files in other folders)
